<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:visibility="visible"
    android:id="@+id/rl_root_container"
    android:background="@drawable/gradient"
    >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout

            android:id="@+id/rv_main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_choseAddress"
                android:visibility="visible"
                >

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/ed_choose_city"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_bg"
                    android:completionThreshold="1"
                    android:hint="@string/choose_city_here"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="24sp"
                    android:gravity="center_vertical"
                    android:visibility="invisible" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="V"
                    android:textColor="@color/white"
                    android:id="@+id/btn_city_add"
                    android:background="@drawable/round_bg"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout android:id="@+id/ll_address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/city"
                    android:clickable="true"

                     />
                <TextView android:id="@+id/tv_updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/data_update"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_overview_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:text="@string/clear_sky"/>
                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="90sp"
                    android:clickable="true"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:text="@string/_29_c"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tv_temp_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/min_temp_05_05_am"/>
                    <Space android:layout_width="50dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_temp_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/max_temp_05_05_pm"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_details_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@drawable/round_bg">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunrise"
                            android:tint="#FFFFFF"
                            tools:ignore="UseAppTint"
                            />
                        <Space android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="@string/sunrise"/>
                        <TextView
                            android:id="@+id/tv_sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="@string/_06_40_am"/>
                    </LinearLayout>
                    <Space android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@drawable/round_bg">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunset"
                            android:tint="#FFFFFF"
                            tools:ignore="UseAppTint"  />
                        <Space android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="@string/sunset"/>
                        <TextView
                            android:id="@+id/tv_sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="@string/_06_40_am"/>
                    </LinearLayout>
                    <Space android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:id="@+id/ll_wind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@drawable/round_bg">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/wind"
                            android:tint="#FFFFFF"
                            tools:ignore="UseAppTint"  />
                        <Space android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="@string/wind"/>
                        <TextView
                            android:id="@+id/tv_wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="@string/_06_40_am"/>
                    </LinearLayout>
                </LinearLayout>

                <Space android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:id="@+id/ll_pressure"
                        android:layout_width="0dp"
                        android:clickable="true"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@drawable/round_bg">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/pressure"
                            android:tint="#FFFFFF"
                            tools:ignore="UseAppTint"  />
                        <Space android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="Pressure"/>
                        <TextView
                            android:id="@+id/tv_pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="06:40 AM"/>
                    </LinearLayout>
                    <Space android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@drawable/round_bg">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/humidity"
                            android:tint="#FFFFFF"
                            tools:ignore="UseAppTint"  />
                        <Space android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="@string/humidity"/>
                        <TextView android:id="@+id/tv_humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="@string/_06_40_am"/>
                    </LinearLayout>
                    <Space android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@drawable/round_bg">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/info"
                            android:tint="#FFFFFF"
                            tools:ignore="UseAppTint" />
                        <Space android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="@string/created_by"/>
                        <TextView
                            android:id="@+id/about"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="@string/gallapillo"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_error_container"
        android:orientation="vertical"
        android:layout_marginTop="320dp"
        android:visibility="invisible"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_with_internet_connection"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <Button
            android:id="@+id/btn_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"/>
    </LinearLayout>

</RelativeLayout>